# serializer version: 1
# name: test_upload_cli
  '''
  Delivery summary:
  
  	delivery_id: 20120114T120001-product1-5557
  	pushing_entity_id: GLO-MERCATOR-TOULOUSE-FR
  	product_id: product1
  	dataset_id: dataset1
  
  	Total: 2 files uploaded.
  '''
# ---
# name: test_upload_cli_save_delivery_json
  '''
  Delivery summary:
  
  	delivery_id: 20120114T120001-product1-1106
  	pushing_entity_id: GLO-MERCATOR-TOULOUSE-FR
  	product_id: product1
  	dataset_id: dataset1
  
  	Total: 2 files uploaded.
  '''
# ---
# name: test_upload_cli_save_delivery_json.1
  dict({
    'creation_timestamp': None,
    'dataset_id': 'dataset1',
    'delivery_id': '20120114T120001-product1-1106',
    'error_message': None,
    'operations': list([
      dict({
        'files': list([
          dict({
            'checksum': 'a0ec500ddee5f80143f0f489b28ca832',
            'error_message': None,
            'file_size_mb': 0,
            'key_suffix': 'file1.txt',
            'upload_end_time': '2012-01-14T12:00:01Z',
            'upload_start_time': '2012-01-14T12:00:01Z',
          }),
          dict({
            'checksum': 'e9c91642feb1c07cf3c270c7165c3c3c',
            'error_message': None,
            'file_size_mb': 0,
            'key_suffix': 'file2.txt',
            'upload_end_time': '2012-01-14T12:00:01Z',
            'upload_start_time': '2012-01-14T12:00:01Z',
          }),
        ]),
        'operation': 'upload',
      }),
    ]),
    'product_id': 'product1',
    'pushing_entity_id': 'GLO-MERCATOR-TOULOUSE-FR',
    'status': 'pending',
    'status_timestamp': None,
  })
# ---
# name: test_upload_one_file_cannot_be_uploaded
  '''
  {
    "delivery_id": "20120114T120001-GLOBAL_ANALYSISFORECAST_BGC_001_028-3615",
    "pushing_entity_id": "GLO-MERCATOR-TOULOUSE-FR",
    "product_id": "GLOBAL_ANALYSISFORECAST_BGC_001_028",
    "dataset_id": "cmems_mod_glo_bgc-bio_anfc_0.25deg_P1D-m_202311",
    "operations": [
      {
        "operation": "upload",
        "files": [
          {
            "key_suffix": "file2.txt",
            "error_message": null,
            "file_size_mb": 0,
            "checksum": "mock-etag",
            "upload_start_time": "2012-01-14T12:00:01Z",
            "upload_end_time": "2012-01-14T12:00:01Z"
          }
        ]
      }
    ],
    "creation_timestamp": null,
    "status": "pending",
    "status_timestamp": null,
    "error_message": null
  }
  '''
# ---
# name: test_upload_python_interface
  dict({
    'delivery_id': '20120114T120001-product1-8359',
    'files_failed': list([
    ]),
    'files_invalid': list([
    ]),
    'files_uploaded': list([
      tuple(
        PosixPath('tests/resources/dataset1/file1.txt'),
        'product1/dataset1/file1.txt',
      ),
      tuple(
        PosixPath('tests/resources/dataset1/file2.txt'),
        'product1/dataset1/file2.txt',
      ),
    ]),
  })
# ---
# name: test_upload_python_interface.1
  '''
  {
    "delivery_id": "20120114T120001-product1-8359",
    "pushing_entity_id": "GLO-MERCATOR-TOULOUSE-FR",
    "product_id": "product1",
    "dataset_id": "dataset1",
    "operations": [
      {
        "operation": "upload",
        "files": [
          {
            "key_suffix": "file1.txt",
            "error_message": null,
            "file_size_mb": 0,
            "checksum": "a0ec500ddee5f80143f0f489b28ca832",
            "upload_start_time": "2012-01-14T12:00:01Z",
            "upload_end_time": "2012-01-14T12:00:01Z"
          },
          {
            "key_suffix": "file2.txt",
            "error_message": null,
            "file_size_mb": 0,
            "checksum": "e9c91642feb1c07cf3c270c7165c3c3c",
            "upload_start_time": "2012-01-14T12:00:01Z",
            "upload_end_time": "2012-01-14T12:00:01Z"
          }
        ]
      }
    ],
    "creation_timestamp": null,
    "status": "pending",
    "status_timestamp": null,
    "error_message": null
  }
  '''
# ---
